data/derived/comb/progs/unify/prog7864.ml.out
Characters 77-79:
  | Sine e1 -> sin(pi*(eval e1))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
